--- a/WindowsFormsApp7/MystatWebPage.csproj
+++ b/WindowsFormsApp7/MystatWebPage.csproj
@@ -136,5 +136,8 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\comments_24px.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
